--- a/TetrisGameTest/TetrisGameTest.csproj
+++ b/TetrisGameTest/TetrisGameTest.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Grid.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tetromino.cs" />
+    <Compile Include="Tetrade.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
